<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple_500"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ImcActivity">

    <TextView
        style="@style/textviewform"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/imc_desc"
        android:textSize="16sp" />
    <TextView
        style="@style/textviewform"
        android:text="@string/imc_desc1"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <EditText
        style="@style/edit_textform"
        android:id="@+id/edit_imc_weight"
        android:hint="@string/weight"
        />
    <EditText
        style="@style/edit_textform"
        android:id="@+id/edit_imc_height"
        android:hint="@string/height"
        />

    <Button
        android:id="@+id/btn_imc_send"
        style="@style/buttonForm"
        android:text="@string/calc"
        app:cornerRadius="40dp" />




</LinearLayout>
</ScrollView>